fixed alignment in question editor

--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,13 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
+/* small screens */
+@media only screen and (max-width: 600px) {
+  main {
+    overflow-y: clip;
+  }
+}
+
 header {
   height: 5rem;
   background: var(--bg-header-start);
