--- a/css/tiles.css
+++ b/css/tiles.css
@@ -113,6 +113,11 @@ input {
   background-color: var(--selected-primary);
 }
 
-#submit-button-tile {
+#submit-button-tile,#add-button-tile,#question-tile {
   grid-column: 1 / 3;
+}
+
+#question-tile input {
+  width: 80%;
+  height: 80%;
 }
